--- a/assets/scrollbar.css
+++ b/assets/scrollbar.css
@@ -7,7 +7,7 @@ See similar examples here: https://css-tricks.com/the-current-state-of-styling-s
 
 
 :root{
-  --ECB-blue: #475684;
+  --ECB-blue: #f39c12;
   --backgroud-scrollbar: rgba(206, 206, 206, 0);
 }
 
