--- a/assets/style.css
+++ b/assets/style.css
@@ -280,7 +280,8 @@ h6 {margin-top: 0;}
 
 .upload_data{
     color: white;
-    text-decoration: none
+    text-decoration: none;
+    font-size: x-large;
 }
 .go_to_example{
     height: 38px;
@@ -784,8 +785,8 @@ h6 {margin-top: 0;}
 
 .markdown_style{
     color:white;
-    padding-left:3%;
-    padding-right:3%;
+    /* padding-left:3%;
+    padding-right:3%; */
     font-size: medium;
     font-weight: lighter;
     font-family:sans-serif
@@ -1450,7 +1451,7 @@ li a {
 #queryicon-cinima{
     margin-top: 5px;
     position: absolute;
-    margin-left: 80px;
+    margin-left: 30px;
     z-index: 1000;
     width: 16px;
 }
