--- a/assets/style.css
+++ b/assets/style.css
@@ -580,7 +580,7 @@ h6 {margin-top: 0;}
 .skt_rowtable{
     width: -webkit-fill-available;
     justify-content: center;
-    height: 200px;
+    height: 100%;
 }
 
 .skt_col2{
